Fix spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,12 @@
 @viewport { width: device-width; scale: 1; }
 
 html {
-  font-family: inherit;
   box-sizing: border-box;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.3 sans-serif;
+  font-family: sans-serif;
 }
 
 *, *::before, *::after {
@@ -40,7 +39,12 @@ a {
   color: #0074d9;
 }
 
-.planets:hover {
+nav a:hover {
+  color: #fff;
+  background-color: #0074d9;
+}
+
+#current {
   color: #fff;
   background-color: #0074d9;
 }
